[package]
name = "bevy-creeps"
version = "0.1.1"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
bevy = { version = "0.15.3", features = ["wayland"] }
getrandom = { version = "0.3.2", features = ["wasm_js"] }
rand = "0.8"
rand_chacha = "0.9.0"
statrs = "0.18.0"



